[project]

# PyPI: https://pypi.org/project/sampleproject/
# https://packaging.python.org/specifications/core-metadata/#name
name = "rivtlib"

# https://www.python.org/dev/peps/pep-0440/
# https://packaging.python.org/guides/single-sourcing-package-version/
version = "0.8.1"

# https://packaging.python.org/specifications/core-metadata/#summary
description = "write, organize, share engineering documents"

# https://packaging.python.org/specifications/core-metadata/#description-optional
readme = "README.md"

# https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
requires-python = ">=3.8"

# https://packaging.python.org/en/latest/specifications/core-metadata/#license

license = "MIT"

keywords = ["engineering", "document", "write", "organize", "share", "markdown"]

authors = [{ name = "rhholland", email = "rholland@rivt.info" }]

maintainers = [{ name = "rhholland", email = "rholland@rivt.info" }]

classifiers = [
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Engineering :: Document",
  "Topic :: Software Development :: Libraries :: Python",
  "Topic :: Software Development :: Engineering :: Markdown ",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
# For a list of valid classifiers, see https://pypi.org/classifiers/
# https://packaging.python.org/discussions/install-requires-vs-requirements/

dependencies = [
  "numpy",
  "sympy",
  "pandas",
  "tabulate",
  "matplotlib",
  "jupyter",
  "docutils",
  "xlrd",
  "antlr4-python3-runtime>=4.7,<4.8",
]

#[project.optional-dependencies]
#dev = ["check-manifest"]
#test = ["coverage"]

[project.urls]
"Homepage" = "https://rivt-doc.net"
#"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
#"Source" = "https://github.com/pypa/sampleproject/"
#"Funding" = "https://donate.pypi.org"
#"Say Thanks!" = "http://saythanks.io/to/example"

# creates command line 'sample', executes the function `main` from the package
#[project.scripts]
#sample = "sample:main"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = { "sample" = ["*.dat"] }

[build-system]
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
build-backend = "setuptools.build_meta"
requires = ["setuptools>=43.0.0", "wheel"]
